--- a/single.html
+++ b/single.html
@@ -12,10 +12,11 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
-
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <title>Aadit Bioscope - Inspirational Blogging</title>
+	<!-- Favicon -->
+	<link rel="icon" href="/img/author.ico">
   </head>
   <body>
     
