--- a/dharamshala.html
+++ b/dharamshala.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -14,12 +12,11 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="./styles.css">
-	<link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <title>Aadit Bioscope - Inspirational Blogging</title>
 	<!-- Favicon -->
-	<link rel="icon" href="/img/author.ico">
+	<link rel="icon" type="image/x-icon" href="/img/author.ico">
   </head>
   <body>
     
@@ -32,11 +29,10 @@
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-		  <a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+		  <a class="navbar-brand" href="./index.html"><img src="./img/logo.png"></a>
 
 
 		<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
-			
 		                <ul class="navbar-nav">
 		                    <li class="nav-item">
 		                    <a class="nav-link" href="#">My Blogs</a>
@@ -53,40 +49,25 @@
 	  </div>
 	  </nav>
 
-	  <!-- hero section -->
+		<!-- Hero Section -->
 	  <div class="container" id="hero">
 	  	<div class="row justify-content-end">
 	  		<div class="col-lg-6 hero-img-container">
-	  			<a href="./single.html">
 	  			<div class="hero-img">
-	  				<img src="./img/hero-img.png">
+	  				<!-- hero img -->
+	  				<img src="./img/hero-img-3.jpeg">
 	  			</div>
-	  			</a>
 	  		</div>	  		
 
 	  		<div class="col-lg-9">
 	  			<div class="hero-title">
-	  				<a href="./single.html">
-						<!-- Slider -->
-						<section class="cd-intro">
-							<h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
-							<span>Hi, My Name is Aadit & I am A</span><br>
-							<span class="cd-words-wrapper">
-								<b class="is-visible">Student</b>
-								<b>Son</b>
-								<b>Writer</b>
-								<b>Blogger</b>
-							</span>
-							</h1>
-						</section> <!-- cd-intro -->
-						<!-- /.slider -->
-	  				</a>
+	  				<h1>Trip To Dharamshala</h1>
 	  			</div>
-	  		</div>
 
+	  		</div>
+	  		<!-- hero meta -->
 	  		<div class="col-lg-6">
 	  			<div class="hero-meta">
-	  				<p>Let me Introduce myself to world.</p>
 	  				<div class="author">
 	  					<div class="author-img"><img src="./img/author-img.png"></div>
 	  					<div class="author-meta">
@@ -94,74 +75,84 @@
 	  					<span class="author-tag">Blogger</span>
 	  					</div>	
 	  				</div>
+	  				<span class="date mt-2">16th June, 2023</span>
+	  				<div class="tags mt-2">
+							<a href=""><span class="badge badge-pill p-2 badge-light">#Travel</span></a>
+							<a href="">
+							<span class="badge badge-pill p-2 badge-light">#Flight</span></a>
+							<a href="">
+							<span class="badge badge-pill p-2 badge-light">#Vlogger</span></a>
+	  				</div>
 	  			</div>
 	  		</div>
 	  	</div>
 	  </div>
 </div>
-<!-- hero ends -->
 
-<!-- Article Grid -->
 
-<div class="container mt-2 mb-2 pt-5 pb-5" id="article-grid">
+<!-- Content -->
+<div class="container mt-5" id="content">
 	<div class="row justify-content-center">
-
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single.html">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/1.jpeg">
-			</div>
-
-				<div class="article-meta text-left">
-					<h2>My Life and My World</h2>
-					<p>My story starts from the hospital bed when I was born.</p>
-				</div>
-			</div>
-			</a>
+		<!-- Share buttons -->
+		<div class="col-lg-1 text-left mb-3 fixed" id="social-share">
+			<a class="btn  btn-light m-2" href="#"><i class="fab fa-facebook-f"></i></a>
+			<a class="btn  btn-light m-2" href="#"><i class="fab fa-google"></i></a>
+			<a class="btn  btn-light m-2" href="#"><i class="fab fa-twitter"></i></a>
 		</div>
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./dharamshala.html">
-			<div class="article-card">
-			<div class="article-img">
-				<img src="./img/2.jpeg">
-			</div>
 
-				<div class="article-meta text-left">
-					<h2>Trip To Dharamshala</h2>
-					<p>My trip so far was until 4 days so we had lot of fun.</p>
-				</div>
-			</div>
-			</a>
-		</div>		
+		<!-- the content -->
+		<div class="col-xl-7 col-lg-10 col-md-12">
+			<p class="lead">Hi everyone I am Aadit and I am going to share my Dharamshala trip experience. </p>
+			<p>My trip so far was until 4 days so we had lot of fun</p>
 
-		<div class="col-xl-6 col-lg-12 text-center">
-			<a href="./single.html">
+			<p class="lead">Day1:</p>
+			<p>We (Family) took a flight from Delhi to Dharamshala (DEL-DHA). Then we took a hotel in a beautiful place called mecloydgunz. We saw the beauty of the mountains there and clicked pics through the window. We rested in our hotel room for a few mins and then went for dinner in the evening. We filled our stomach in good and delicious food. That made our sleep very good.</p>
+
+			<p class="lead">Day2:</p>
+			<p>We woke up and there was a pleasant weather better than before. We had breakfast before our tour in Dharamshala places. We went to a small tea garden and it was very pleasant look. We went to a very big place and had our lunch there in a place called Norbolinka institute and clicked photos there. We reached the hotel and had some snacks. We went for dinner in sometime and after we went from dinner. We went to a small room called a fire place we took photos in it. We went to the room and rested in peace.</p>
+
+			<p class="lead">Day3:</p>
+			<p>We woke up once again in a pleasant weather. We went to a monastery and took some photos and videos and saw that there are some men who are worshiping the man Dalai Lama who is very important in Dharamshala. We went to hotel back and ate some snacks and rested for some time.</p>
+
+			<p class="lead">Day4:</p>
+			<p>We did not go anywhere we packed for the flight tomorrow and went to lunch and dinner along and watched a movie in the hotels home cinema then came back in the room in the evening in bedtime we watched another movie and slept throughout the night.</p>
+
+			<p class="lead">Day5:</p>
+			<p>It was our time for the flight from Dharamshala to Delhi (DHA-DEL) we miss Dharamshala and we will never forget the peace and quietness that we have brought along :) </p>
+
+			<p> Keep encourging me reading my experience and I will share more in my next blog</p>
+
+		</div>
+
+		<div class="col-lg-10 mt-3">
+			<hr>
+		</div>
+	</div>
+</div>
+
+
+<!-- Related Article Grid -->
+
+<div class="container mt-3 mb-5" id="article-grid">
+	<div class="row">
+
+		<div class="col-xl-6 col-lg-12  text-center">
+			<a href="">
 			<div class="article-card">
 			<div class="article-img">
 				<img src="./img/3.jpeg">
 			</div>
 
-				<div class="article-meta text-left">
+				<div class="article-meta  text-left">
 					<h2>Next Blog - Coming Soon</h2>
 					<p>Began it will a more first was something return. Were ...</p>
 				</div>
 			</div>
 			</a>
 		</div>
-	
-	
 
-
-	</div> <!-- Article Grid Row Ends -->
-</div> <!-- Article Grid Container Ends -->
-
-<!-- More articles button -->
-
-<div class="container text-center pb-3 mb-5">
-		<a href="#" class="btn btn-lg btn-light">More Articles</a>
+	</div>
 </div>
-
 
 <!-- Footer section  -->
 
@@ -195,7 +186,7 @@
 		<!-- copyright text -->
 		<div class="row pt-2">
 			<div class="col-lg-12 text-center">
-				<span>&copy <a href="">PSquareINC</a> All Rights Received.</span>
+				<span>&copy <a href="">NewToDesign.com</a> All Rights Received.</span>
 			</div>
 		</div>
 	</div>
@@ -204,11 +195,6 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.countdown.min.js"></script>
-	<script src="js/slider.js"></script>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
