--- a/single.html
+++ b/single.html
@@ -16,7 +16,7 @@
 
     <title>Aadit Bioscope - Inspirational Blogging</title>
 	<!-- Favicon -->
-	<link rel="icon" href="/img/author.ico">
+	<link rel="icon" type="image/x-icon" href="/img/author.ico">
   </head>
   <body>
     
